fixed a bug about overflowing selection series at creating widget

--- a/araqne-webconsole/src/main/resources/WEB-INF/css/dashboard.css
+++ b/araqne-webconsole/src/main/resources/WEB-INF/css/dashboard.css
@@ -15,6 +15,15 @@
 		z-index: 3040;
 	}
 
+	#view-dashboard .paneError .alert > ul {
+		text-align: left;
+		margin-top: 10px;
+		margin-left: 50px;
+		margin-bottom: 10px;
+		list-style-type: square;
+	}
+
+
 	.blank-info {
 		width: 100%;
 		height: 100%;
@@ -250,6 +259,7 @@
 	[fx-dashboard-id=series-list] {
 		border: 1px solid silver;
 		height: 160px;
+		overflow: auto;
 	}
 
 	[fx-dashboard-id=series-toolbar] {
